<LinearLayout xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/configuration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_gray" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title_activity_billing_cycle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:background="@color/dark_gray"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/billing_cycle_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/message_billing_cycle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:orientation="vertical"
        android1:layout_width="match_parent"
        android1:layout_height="0dip"
        android1:layout_weight="0.85" >

        <kankan.wheel.widget.WheelView
            android:id="@+id/billing_cycle_wheel"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_vertical"
            android1:layout_centerHorizontal="true"
            android1:layout_centerVertical="true" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
	        android1:id="@+id/billing_cycle_save_button"
	        android1:layout_width="0dip"
	        android1:layout_height="wrap_content"
	        android:layout_weight="0.50"
	        android1:text="@string/save" />
	    <Button
	        android1:id="@+id/billing_cycle_skip_button"
	        android1:layout_width="0dip"
	        android1:layout_height="wrap_content"
	        android:layout_weight="0.50"
	        android1:text="@string/skip_config" />

    </LinearLayout>

</LinearLayout>