<LinearLayout xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/configuration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_gray" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title_activity_billing_cost"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:background="@color/dark_gray"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/billing_cost_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/message_billing_cost"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android1:layout_width="match_parent"
        android1:layout_height="0dip"
        android1:layout_weight="0.85"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" >

            <kankan.wheel.widget.WheelView
                android:id="@+id/billing_cost_wheel"
                android:layout_width="150dp"
                android:layout_height="300dp"
                android:layout_weight="0.2" />

            <EditText
                android:id="@+id/billing_cost_input"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:ems="10"
                android:inputType="number"
                android:textSize="48sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/billing_cost_save_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/save" />

        <Button
            android:id="@+id/billing_cost_skip_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/skip_config" />

    </LinearLayout>

</LinearLayout>