<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title_activity_data_cap"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:background="@color/dark_gray"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/data_cap_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/message_data_cap"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android1:id="@+id/scrollView1"
        android1:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.85"
        android:isScrollContainer="true"
        android:padding="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="30dp" >
        
	    <RadioGroup
	        android1:id="@+id/data_cap_radio_group"
	        android1:layout_width="match_parent"
	        android1:layout_height="0dip" >
	    </RadioGroup>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="center_horizontal" >

	    <Button
	        android1:id="@+id/data_cap_skip_button"
	        android1:layout_width="0dip"
	        android1:layout_height="wrap_content"
	        android:layout_weight="0.50"
	        android1:text="@string/skip" />
	    
	    <Button
	        android1:id="@+id/data_cap_save_button"
	        android1:layout_width="0dip"
	        android1:layout_height="wrap_content"
	        android:layout_weight="0.50"
	        android1:text="@string/save" />
    
    </LinearLayout>
    
    

</LinearLayout>