<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/configuration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_gray" />
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title_activity_prepaid"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:background="@color/dark_gray"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/prepaid_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/message_prepaid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_weight="0.90"
        android1:orientation="vertical" >

        <TextView
            android1:id="@+id/TextView02"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginTop="5dp"
            android1:text="Enter data in card:"
            android1:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content" >

            <EditText
                android1:id="@+id/prepaid_data_input"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:layout_weight="1"
                android1:ems="10"
                android1:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <RadioGroup
                android1:id="@+id/prepaid_radio_group"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:layout_weight="1" >

                <RadioButton
                    android1:id="@+id/MB"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:checked="true"
                    android1:text="MB" />

                <RadioButton
                    android1:id="@+id/GB"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:text="GB" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android1:id="@+id/TextView01"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_marginTop="5dp"
            android1:text="Enter the price paid for card:"
            android1:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content" >

            <kankan.wheel.widget.WheelView
                android1:id="@+id/prepaid_cost_wheel"
                android1:layout_width="150dp"
                android1:layout_height="match_parent" />

            <EditText
                android1:id="@+id/prepaid_cost_input"
                android1:layout_width="0dip"
                android1:layout_height="wrap_content"
                android1:layout_gravity="center_vertical"
                android1:layout_weight="0.8"
                android1:ems="10"
                android1:inputType="number"
                android1:textSize="48sp" />
        </LinearLayout>
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/prepaid_cost_save_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/save" />

        <Button
            android:id="@+id/prepaid_cost_skip_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/skip_config" />

    </LinearLayout>

</LinearLayout>